--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ ENV/
 .ropeproject
 
 # Databases
-.sqlite
+*.sqlite
 
 # Mac files
 .DS_Store
@@ -102,7 +102,10 @@ KoboReader*
 .idea/
 
 # Compressed files
-.zip
+*.zip
 
 # Backup folder
 Backups/
+
+# Output text
+*.txt
